--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .terraform
 *.tfstate
 *.tfstate.backup
+.terraform/providers/registry.terraform.io/hashicorp/aws/4.38.0/linux_amd64/terraform-provider-aws_v4.38.0_x5
